index.html updated

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ ${description}
       const encodedMessage = encodeURIComponent(message);
 
       // 🔴 REPLACE WITH YOUR NUMBER
-      const whatsappUrl = `https://wa.me/91XXXXXXXXXX?text=${encodedMessage}`;
+      const whatsappUrl = `https://wa.me/919372181313?text=${encodedMessage}`;
 
       window.open(whatsappUrl, "_blank");
     });
